--- a/SignIn.html
+++ b/SignIn.html
@@ -11,7 +11,7 @@
 <body>
 
   <!-- NavBar -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -43,21 +43,21 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="grey.png" class="d-block w-100" width="50%" height="30%" alt="..."> 
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="grey.png" class="d-block w-100" width="50%" height="30%" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="grey.png" class="d-block w-100" width="50%" height="30%" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -73,7 +73,93 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+ 
+
+  <!-- Card Heading Section -->
+
+  <div class="contanier card-heading">
+
+    <div class="row">
+
+      <div class="col-lg-4">
+        <img src="grey.png" class="rounded-circle" alt="">
+        <h2>Heading</h2>
+        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      </div>
+
+      <div class="col-lg-4">
+        <img src="grey.png" class="rounded-circle" alt="">
+        <h2>Heading</h2>
+        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      </div>
+
+      <div class="col-lg-4">
+        <img src="grey.png" class="rounded-circle" alt="">
+        <h2>Heading</h2>
+        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      </div>
+    </div>
+
+  </div>
   
+  <hr>
+
+  <!-- Feauturrete Heading -->
+  <div class="row second-heading">
+
+    <div class="col-md-6">
+      <h2>First featurette heading. It’ll blow your mind.</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates obcaecati sed adipisci! Expedita, error, quam dolores, quia reiciendis laborum consectetur aliquam voluptatibus ex esse officiis eum. Voluptatem omnis laboriosam ea?</p>
+    </div>
+
+    <div class="col-md-6">
+      <img src="grey.png" alt="">
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+
+    <div class="col-md-6">
+      <img src="grey.png" alt="">
+    </div>
+
+    <div class="col-md-6">
+      <h2>Oh yeah, it’s that good. See for yourself.</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia optio beatae deleniti. Praesentium tempora voluptatibus eveniet corporis rerum architecto, maxime eaque saepe repellendus, laboriosam impedit libero similique consequatur maiores fuga.</p>
+    </div>
+
+  </div>
+
+  <hr>
+
+  <div class="row">
+
+    <div class="col-md-6">
+      <h2>And lastly, this one. Checkmate.</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor voluptatibus rem hic quis iste tenetur voluptatem eos nulla doloribus modi culpa iusto laudantium ipsam, autem dicta aspernatur alias ut ex.</p>
+    </div>
+
+    <div>
+      <img src="grey.png" alt="">
+    </div>
+  </div>
+
+  <!-- Footer -->
+
+  <footer class="container">
+    <p class="float-end"><a href="#">Back to top</a></p>
+    <p>&copy; 2021 Learn EnCode, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
+  
+
+    
+
+
 </body>
 
 <!-- BootStrap Links -->
